Fix mobile viewport w/ Visualizer
The mobile viewport is now working as expected. The canvas was too large
which was causing problems for mobile. The animations reach 400px though
so on a super small phone it wont look right, but there is nothing I can
do about that. Additionally, that is not the intended use case for this
visualizer, so this becomes a non issue

--- a/css/visualizer.css
+++ b/css/visualizer.css
@@ -20,9 +20,3 @@ div {
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
-
-@media screen and (min-width: 420px) {
-	.vz-wrapper {
-		box-shadow: inset 0 0 200px 60px #000;
-	}
-}
